# any_percent_bc

./: .gitignore  README.md  any_percent_bc.py  pyproject.toml
wandb/: latest-run
wandb/run-20260101_034541-10827633-2d34-4562-922a-634af820b92c/: run-10827633-2d34-4562-922a-634af820b92c.wandb
wandb/run-20260101_034541-10827633-2d34-4562-922a-634af820b92c/files/: config.yaml  requirements.txt  wandb-metadata.json
