[project]
name = "any-percent-bc"
version = "0.1.0"
description = "copy of CORL team's any_percent_bc.py"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython<3.0",
    "gym==0.23.1",
    "h5py>=3.14.0",
    "mujoco-py==2.1.2.14",
    "numpy>=2.0.2",
    "pyrallis>=0.3.1",
    "six>=1.17.0",
    "termcolor>=3.1.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
